--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,15 +1,15 @@
 #Test against this version of Node.js
 environment:
-	matrix:
-	#node.js
-	- nodejs_version: "6"
+matrix:
+#node.js
+- nodejs_version: "6"
 
 #Install scripts. (runs after repo cloning)
-Install:
-	#Get the latest stable version of Node.js or io.js
-	- ps: Install-Product node $env:nodejs_version
+install:
+#Get the latest stable version of Node.js or io.js
+- ps: Install-Product node $env:nodejs_version
 	#install modules
-	- npm install
+- npm install
 
 #Post-install test scripts
 test_script:
